# s3web

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml  container.yml
src/: config.rs  main.rs
