[package]
name = "s3web"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7",features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
clap = { version = "4.5", features = ["derive"] }
rust-s3 = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
